--- a/foundations/cascade/stylecopia.css
+++ b/foundations/cascade/stylecopia.css
@@ -2,8 +2,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-p {
+.para,
+.small-para {
   color: hsl(0, 0%, 0%);
+  font-weight: 800;
+}
+
+.small-para {
+  font-size: 14px;
   font-weight: 800;
 }
 
@@ -11,12 +17,7 @@ p {
   font-size: 22px;
 }
 
- .small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
-#confirm-button {
+.confirm {
   background: green;
   color: white;
   font-weight: bold;
@@ -28,7 +29,7 @@ p {
   font-size: 20px;
 }
 
-.text .child {
+.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
