--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 22px;
+  gap: 11px;
 }
 
 .icon {
@@ -67,3 +70,19 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.header {
+  
+  font-weight: bold;
+  
+}
+
+.centro {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.botones{
+  align-self: flex-start;
+}
+
