--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding:  12px;
 }
 
 img {
@@ -23,4 +27,45 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer{
+  display: flex;
+    justify-content: space-between;
+    background: #eee;
+}
+.left-links{
+  display: flex;
+  justify-content: space-around;
+  gap: 8px;
+  
+}
+.right-links{
+  display: flex;
+  gap: 8px;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style-type: none; /* quita las bullets */
+  padding: 0;            /* opcional: elimina sangría por defecto */
+  margin: 0;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  justify-self: center;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  
+  
 }
