--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -3,27 +3,95 @@ body {
   margin: 0;
   min-height: 100vh;
 }
+.contenido
+{
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+  height: 100vh;
+  margin: 0px;
+}
+
+.contenido > * {
+  flex-grow: 1;
+  
+}
+
+.centro{
+  display: flex;
+  align-items: stretch;
+  align-content: stretch;
+  justify-content: flex-start;
+  border: 1px solid black;
+}
 
 .header {
+  display: flex;
   height: 72px;
+  padding-left: 16px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  
+}
+
+a{
+  text-decoration: none;
+  color: #eee;
 }
 
 .footer {
+  display: flex;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
+  
+  justify-content: center;
+  align-items: center;
+  border: solid black 1px;
+  flex-grow: 0;
+  
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  justify-content: flex-start;
+  padding: 16px;
+  flex: 1 0 auto;
+  font-size: 24px;
+  
+}
+ul {
+  list-style-type: none; 
+  padding: 0;            
+  margin: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex: 1 1 300px;
+  align-self: stretch;
+  padding: 48px;
+  justify-content: flex-start;
+  
+}
+
+.texto
+{
+  display: flex;
+  flex-flow: row wrap;
+  padding: 16px;
+  
+  flex-grow: 1;
+  
+  
 }
