--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -9,6 +9,10 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  grid-template-columns: clamp(300px, 1fr, 400px) clamp(300px,3fr,500px);
+  grid-template-rows:  clamp(200px,1fr,300px)  clamp(200px,1fr,300px) clamp(200px,5fr,600px) clamp(200px,1fr,300px);
+  display: grid;
+  gap: 15px;
 }
 
 .container div {
@@ -23,19 +27,25 @@ html {
 .header {
   background-color: #006157;
   grid-column: 1 / 3;
+  grid-row: 1 / 2;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1 / 2;
   grid-row: 2 / 4;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
 }
 
 .article p {
@@ -48,4 +58,5 @@ html {
 .footer {
   background-color: #393f4d;
   grid-column: 1 / 3;
+  grid-row: 4/5;
 }
