--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: repeat(4,auto);
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +21,32 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
+.menu ul{
+
+  display: grid;
+  list-style-type: none;
+  grid-template-columns: repeat(4,1fr);
+}
 .menu ul,
 .menu li {
+ 
   font-size: 16px;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+  display: grid;
+  grid-template-rows: repeat(4,1fr);
+  gap: 50px;
+ 
 }
 
 .sidebar .photo {
@@ -34,6 +55,7 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  
 }
 
 
@@ -42,19 +64,39 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  place-items: center;
+  /*justify-content: center;
+  align-content: center;*/
 }
+
+
+
 
 .nav {
   background-color: #C50208;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
-
+.nav ul{
+   display: grid;
+  grid-template-columns: repeat(3,1fr);
+  list-style-type:none;
+}
 .nav ul li {
+ 
+  
   font-size: 16px;
   text-transform: uppercase;
 }
 
 .article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  gap: 15px;
   background-color: #bccbde;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
 }
 
 .article p {
@@ -68,6 +110,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +126,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
 }
 
 .footer p {
