--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,6 +9,10 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px 15px;
 }
 
 .container div {
@@ -18,26 +22,33 @@ html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+  background-color: #006157
+ 
 }
 
 .header {
-  background-color: #006157;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
 }
 
 .sidebar {
-  background-color: #005B94;
+  grid-column: 1/ 2;
+  grid-row: 2 / 4;
 }
 
 .nav {
-  background-color: #642cde;
+  grid-column: 2 / 3;
+  grid-row: 2/ 3;
 }
 
 .article {
-  background-color: #7E1DC3;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
 }
 
 .footer {
-  background-color: #393f4d;
+  grid-column: 1 / 3;
+  grid-row: 4/ 5;
 }
 
 .article p {
